--- a/package.json
+++ b/package.json
@@ -14,9 +14,28 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-prism": "^2.3.0",
     "next": "13.3.1",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
+    "react-responsive": "^9.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
+    "remark-stringify": "^10.0.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
+    "@types/markdown-it": "^12.2.3",
+    "@types/prismjs": "^1.26.0",
+    "@types/remark-prism": "^1.3.4"
   }
 }
