--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.7.0",
+    "html-to-text": "^9.0.5",
     "markdown-it": "^13.0.1",
     "markdown-it-prism": "^2.3.0",
     "next": "13.3.1",
@@ -34,8 +32,12 @@
   },
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
+    "@types/html-to-text": "^9.0.0",
     "@types/markdown-it": "^12.2.3",
+    "@types/node": "18.15.13",
     "@types/prismjs": "^1.26.0",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
     "@types/remark-prism": "^1.3.4"
   }
 }
