--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "remark-parse": "^10.0.1",
     "remark-prism": "^1.3.6",
     "remark-stringify": "^10.0.2",
+    "rss": "^1.2.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "@types/remark-prism": "^1.3.4"
+    "@types/remark-prism": "^1.3.4",
+    "@types/rss": "^0.0.30"
   }
 }
